# datamatrix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.rustdoc.md
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs  py_datamatrix.rs  py_datamatrix_builder.rs
bindings/python/tests/: test_datamatrix.py  test_read_files.py
src/: datamatrix_builder.rs  errors.rs  lib.rs
tests/: test_builder.rs
tests/test_files/: cities_by_distance.csv  example_input.tsv  five_columns_short.txt  three_columns_short.txt
