[package]
name = "datamatrix"
version = "0.1.0"
edition = "2021"
authors = ["dgront@chem.uw.edu.pl"]
description = "Flexible matrix for 2D data with annotated rows and columns"
license = "Apache-2.0"
repository = "https://github.com/dgront/datamatrix"
keywords = ["matrix", "data", "loader", "scientific", "heatmap"]
categories = ["science", "data-structures"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"