[package]
name = "datamatrix"
version = "0.2.0"
edition = "2021"
authors = ["dgront@chem.uw.edu.pl"]
description = "Labeled numeric matrices with file ingest (CSV/TSV/etc.), symmetric fill, and fast label-based lookup."
license = "Apache-2.0"
repository = "https://github.com/dgront/datamatrix"
keywords = ["matrix", "loader", "csv", "tsv", "labels"]
categories = ["science", "data-structures", "parsing"]
homepage = "https://github.com/dgront/datamatrix"
documentation = "https://docs.rs/datamatrix"
readme = "README.md"

[dependencies]
thiserror = "1.0"
