[package]
name = "data-matrix"
version = "0.2.0"
edition = "2021"
authors = ["dgront@chem.uw.edu.pl"]
description = "Labeled numeric matrices with file ingest (CSV/TSV/etc.), symmetric fill, and fast label-based lookup."
license = "Apache-2.0"
repository = "https://github.com/dgront/datamatrix"
keywords = ["matrix", "loader", "csv", "tsv", "labels"]
categories = ["science", "data-structures", "parsing"]
homepage = "https://github.com/dgront/datamatrix"
documentation = "https://docs.rs/data-matrix"
readme = "README.md"

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "1.0"
flate2 = "1.0"
